cabal-version: 3.4

name: OpenGLSandbox
version: 0.1.0.0
synopsis: A sandbox for tinkering with OpenGL.
license: BSD-3-Clause
license-file: LICENSE
author: Matthew Stewart
maintainer: m.scott.stewart@gmail.com
category: Graphics
build-type: Simple
data-files:
  shaders/*.vert
  shaders/*.frag

common common
  hs-source-dirs: src
  ghc-options: -threaded -Wall -Wno-name-shadowing -Wno-unused-matches -fno-ignore-asserts
  default-language: GHC2021
  build-depends:
    bytestring,
    clock,
    exceptions,
    extra,
    GLFW-b,
    OpenGLRaw,
    primitive >= 0.9.0.0,
    resourcet,
    text,
    base

executable OpenGLSandbox
  import: common
  main-is: OpenGLSandbox.hs
  other-modules:
    ApplicationException
    Data.Acquire.Local
    Graphics.UI.GLFW.Local
    Prelude.Local
    Paths_OpenGLSandbox
